Bug 128252 - Bookmark Dialog options "Hide" and "With condition" not explained
Summary: Bookmark Dialog options "Hide" and "With condition" not explained
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords:
: 128653 (view as bug list)
Depends on:
Blocks: HelpGaps-NewFeatures
  Show dependency treegraph
 
Reported: 2019-10-19 12:36 UTC by andreas_k
Modified: 2019-12-17 14:58 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Bookmark Dialog (23.37 KB, image/png)
2019-10-19 12:36 UTC, andreas_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andreas_k 2019-10-19 12:36:07 UTC
Created attachment 155151 [details]
Bookmark Dialog

It's very difficult to understood what Hide checkbox or With condition mean and what to write into the condition text field.
Comment 2 Oliver Brinzing 2019-11-08 17:09:58 UTC
*** Bug 128653 has been marked as a duplicate of this bug. ***
Comment 3 Olivier Hallot 2019-11-22 11:17:32 UTC
I'll appreciate some simple use case, steps to execute the feature or a blog post on the topic do I can build/update the Help page contents.

Besides, My 6.5 (Linux) has different bottom button row, they are swapped. (Help button row is above Rename button row).
Comment 4 Heiko Tietze 2019-11-22 14:59:12 UTC
We should avoid undocumented and not self-explanatory features. So unless we get more information, I asked on the mailing list, these functions should become experimental.
Comment 5 Heiko Tietze 2019-11-22 15:17:55 UTC
(In reply to Heiko Tietze from comment #4)
> ... functions should become experimental.

https://gerrit.libreoffice.org/#/c/83509/
Comment 6 Michael Weghorn 2019-11-26 13:12:07 UTC
for some more background, s.a. tdf#101856
Comment 7 Commit Notification 2019-11-26 13:39:57 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c327be2613005a1bb5a5302ce56d4e2ec9da85b5

tdf#128252 - Make "Hide" and "With condition" experimental

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-11-26 16:53:14 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/cd87801ee235c5f30d070f2eeea6d432e21259bf

tdf#128252 - Make "Hide" and "With condition" experimental

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.