tdf#128252 - Make "Hide" and "With condition" experimental

Unlcear functions made experimental until documentation is available

Change-Id: I9e08752802409b05647d23f9ddd6514f109d1592
Reviewed-on: https://gerrit.libreoffice.org/83509
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit c327be2613005a1bb5a5302ce56d4e2ec9da85b5)